--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="./김세영교수님/index.html">김세영교수님링크</a>
-    <a href="./서승연교수님/index.html">서승연교수님링크</a>
-    <a href="./손우성교수님/index.html">손우성교수님링크</a>
+    <a href="./ksy/index.html">김세영교수님링크</a>
+    <a href="./ssy/index.html">서승연교수님링크</a>
+    <a href="./sos/index.html">손우성교수님링크</a>
   </body>
 </html>
