--- a/sos/index.html
+++ b/sos/index.html
@@ -43,7 +43,17 @@
       <!-- edit 4 begin -->
       <div class="container">
         <!-- example of image begin -->
-        <img src="./imgs/img01.jpg" loading="lazy" />
+        <img src="./imgs/Desktop - 6.jpg" loading="lazy" />
+        <img src="./imgs/Desktop - 9.jpg" loading="lazy" />
+        <img src="./imgs/Desktop - 14.jpg" loading="lazy" />
+        <img src="./imgs/Desktop - 15.jpg" loading="lazy" />
+        <img src="./imgs/Desktop - 16.jpg" loading="lazy" />
+        <img src="./imgs/Desktop - 17.jpg" loading="lazy" />
+        <img src="./imgs/Frame 69.jpg" loading="lazy" />
+        <img src="./imgs/Frame 70.jpg" loading="lazy" />
+        <img src="./imgs/Frame 71.jpg" loading="lazy" />
+        <img src="./imgs/Frame 72.jpg" loading="lazy" />
+        <img src="./imgs/Frame 73.jpg" loading="lazy" />
         <!-- example of image end -->
       </div>
       <!-- edit 4 end -->
