--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </style>
   </head>
   <body>
-    <a href="./ABC/index.html">가나다교수님</a>
-    <a href="./DEF/index.html">라마바교수님</a>
-    <a href="./GHI/index.html">사아자교수님</a>
+    <a href="./ksy/index.html">김세영교수님</a>
+    <a href="./sos/index.html">손우성교수님</a>
+    <a href="./ssy/index.html">서승연교수님</a>
   </body>
 </html>
