--- a/ssy/index.html
+++ b/ssy/index.html
@@ -43,7 +43,13 @@
       <!-- edit 4 begin -->
       <div class="container">
         <!-- example of image begin -->
-        <img src="./imgs/ff.jpg" loading="lazy" />
+        <img src="./imgs/1.jpg" loading="lazy" />
+        <img src="./imgs/2.jpg" loading="lazy" />
+        <img src="./imgs/3.jpg" loading="lazy" />
+        <img src="./imgs/4.jpg" loading="lazy" />
+        <img src="./imgs/5.jpg" loading="lazy" />
+        <img src="./imgs/6.jpg" loading="lazy" />
+        <img src="./imgs/7.jpg" loading="lazy" />
         <!-- example of image end -->
       </div>
       <!-- edit 4 end -->
