--- a/ssy/index.html
+++ b/ssy/index.html
@@ -49,7 +49,7 @@
         <img src="./imgs/4.jpg" loading="lazy" />
         <img src="./imgs/5.jpg" loading="lazy" />
         <img src="./imgs/6.jpg" loading="lazy" />
-        <img src="./imgs/7.jpg" loading="lazy" />
+        <img src="./imgs/Desktop - 49.jpg" />
         <!-- example of image end -->
       </div>
       <!-- edit 4 end -->
