--- a/sos/index.html
+++ b/sos/index.html
@@ -43,17 +43,19 @@
       <!-- edit 4 begin -->
       <div class="container">
         <!-- example of image begin -->
-        <img src="./imgs/Desktop - 6.jpg" loading="lazy" />
-        <img src="./imgs/Desktop - 9.jpg" loading="lazy" />
-        <img src="./imgs/Desktop - 14.jpg" loading="lazy" />
-        <img src="./imgs/Desktop - 15.jpg" loading="lazy" />
-        <img src="./imgs/Desktop - 16.jpg" loading="lazy" />
-        <img src="./imgs/Desktop - 17.jpg" loading="lazy" />
-        <img src="./imgs/Frame 69.jpg" loading="lazy" />
-        <img src="./imgs/Frame 70.jpg" loading="lazy" />
-        <img src="./imgs/Frame 71.jpg" loading="lazy" />
-        <img src="./imgs/Frame 72.jpg" loading="lazy" />
-        <img src="./imgs/Frame 73.jpg" loading="lazy" />
+        <img src="./imgs/1.jpg" loading="lazy" />
+        <img src="./imgs/2.jpg" loading="lazy" />
+        <img src="./imgs/3.jpg" loading="lazy" />
+        <img src="./imgs/4.jpg" loading="lazy" />
+        <img src="./imgs/5.jpg" loading="lazy" />
+        <img src="./imgs/6.jpg" loading="lazy" />
+        <img src="./imgs/7.jpg" loading="lazy" />
+        <img src="./imgs/8.jpg" loading="lazy" />
+        <img src="./imgs/9.jpg" loading="lazy" />
+        <img src="./imgs/10.jpg" loading="lazy" />
+        <img src="./imgs/11.jpg" loading="lazy" />
+        <img src="./imgs/12.jpg" loading="lazy" />
+        <img src="./imgs/13.jpg" loading="lazy" />
         <!-- example of image end -->
       </div>
       <!-- edit 4 end -->
