--- a/ksy/index.html
+++ b/ksy/index.html
@@ -43,7 +43,18 @@
       <!-- edit 4 begin -->
       <div class="container">
         <!-- example of image begin -->
-        <img src="./imgs/201820251_package.jpg" loading="lazy" />
+        <img src="./imgs/1.jpg" loading="lazy" />
+        <img src="./imgs/2.jpg" loading="lazy" />
+        <img src="./imgs/3.jpg" loading="lazy" />
+        <img src="./imgs/4.jpg" loading="lazy" />
+        <img src="./imgs/5.jpg" loading="lazy" />
+        <img src="./imgs/6.jpg" loading="lazy" />
+        <img src="./imgs/7.jpg" loading="lazy" />
+        <img src="./imgs/8.jpg" loading="lazy" />
+        <img src="./imgs/9.jpg" loading="lazy" />
+        <img src="./imgs/10.jpg" loading="lazy" />
+        <img src="./imgs/11.jpg" loading="lazy" />
+        <img src="./imgs/12.jpg" loading="lazy" />
         <!-- example of image end -->
       </div>
       <!-- edit 4 end -->
